@@ -49,7 +49,7 @@ cfg_file=minimal.cfg
 # directly) in order to prevent inconsistencies that can occur
 # when the config files are modified after Nagios starts.
 
-object_cache_file=/usr/local/nagios/var/objects.cache
+object_cache_file=var/objects.cache
 
 
 
